<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.joinself.sdk.sample.MainFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:background="@color/colorPrimary"
            app:titleTextColor="@color/colorTextWhite"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:title="@string/app_name"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/selfIdTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="SelfId:"/>

        <Button
            android:id="@+id/buttonCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_create_account"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selfIdTextView" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign-in with existing SelfId"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonCreate" />


        <Button
            android:id="@+id/buttonCheckLiveness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_selfie_check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonSignIn"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/buttonSendMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_messaging"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonCheckLiveness"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/buttonVerify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_verify_document"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonSendMessage"
            android:layout_marginTop="16dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/buttonExportBackup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_export_backup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonVerify"
            android:layout_marginTop="16dp"
            android:visibility="visible"/>

        <Button
            android:id="@+id/buttonImportBackup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_import_backup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonExportBackup"
            android:layout_marginTop="16dp"
            android:visibility="visible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>